--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/App.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/App.css" /> -->
     <link
       rel="stylesheet"
       href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
