--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,11 @@
       crossorigin="anonymous"
     />
 
-    <!-- <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/App.css" /> -->
     <link
       rel="stylesheet"
       href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
     />
+    <!-- <link rel="stylesheet" href="../src/print.css" /> -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
