--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Evidente</title>
+
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
 
@@ -33,7 +33,7 @@
       rel="stylesheet"
       href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
     />
-    <!-- <link rel="stylesheet" href="../src/print.css" /> -->
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
@@ -41,6 +41,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.js"></script>
+
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
     <script
       type="text/javascript"
