--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Evidente</title>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
